<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:baselineAligned="false">

    <TextView
        android:text="Calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/baseCalculatorTitle"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textAllCaps="true"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="#86E2D5"
        android:typeface="sans" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/inputOneBaseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DEC"
            android:padding="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="18sp"
            android:layout_marginLeft="65dp"
            android:layout_weight="0.03" />

        <TextView
            android:text="and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/unimportantTextView2"
            android:layout_weight="0.03"
            android:textAlignment="center" />

        <Button
            android:id="@+id/inputTwoBaseButton"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="DEC"
            android:padding="15dp"
            android:paddingBottom="15dp"
            android:layout_marginRight="65dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/firstInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.47"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:hint="Input 1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:typeface="sans"
            android:inputType="number" />

        <EditText
            android:id="@+id/secondInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.47"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:hint="Input 2"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:typeface="sans"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/resultBaseButton"
        android:layout_height="wrap_content"
        android:text="DEC"
        android:padding="15dp"
        android:paddingBottom="15dp"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_width="100dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/baseCalcResult"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_weight="0.07"
        android:text="Result" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="+"
            android:id="@+id/addButton"
            android:layout_gravity="right"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_weight="1" />

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="-"
            android:id="@+id/subtractButton"
            android:layout_gravity="right"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_weight="1" />

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="x"
            android:id="@+id/multiplyButton"
            android:layout_gravity="right"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>