<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/Hex"
        android:title="Hex"
        android:checkable="false"></item>
    <item
        android:id="@+id/Dec"
        android:title="Dec"></item>
    <item
        android:id="@+id/Oct"
        android:title="Oct"></item>

    <item
        android:id="@+id/Bin"
        android:title="Bin"></item>
</menu>